--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -314,6 +314,10 @@ a {
     margin-top: 18px;
 }
 
+.mobile-bottom {
+    display: none;
+}
+
 
 @media (max-width: 935px) {
     .corpo {
@@ -346,6 +350,8 @@ a {
         align-items: center;
         border-bottom: 1px solid #DBDBDB;
         z-index: 1;
+        padding: 0px 22px;
+        box-sizing: border-box;
     }
 
     .topo-mobile ion-icon {
@@ -354,7 +360,8 @@ a {
 
     .corpo {
         width: 100vw;
-        margin: 54px auto 0px;
+        margin: 54px auto 54px;
+        display: block;
     }
 
     .stories {
@@ -363,11 +370,29 @@ a {
         background-color: #FAFAFA;
     }
 
+    .stories ion-icon {
+        display: none;
+    }
+
     .posts {
         width: 100%;
     }
 
     .sidebar {
         display: none;
+    }
+
+    .mobile-bottom {
+        width: 100%;
+        height: 54px;
+        padding: 0px 18px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background-color: #FFF;
+        box-sizing: border-box;
     }
 }
