--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Roboto';
   }
 
 body {
@@ -48,7 +49,6 @@ body {
 
 .topo input::placeholder {
     text-align: center;
-    font-family: 'Roboto';
     font-size: 12px;
     line-height: 14px;
     color: #979797;
@@ -183,13 +183,15 @@ a {
 .post-bottom {
     background-color: #FFF;
     border: 1px solid #DBDBDB;
+    box-sizing: border-box;
+    padding: 0px 10px 10px;
 }
 
 .post-bottom img {
     width: 20px;
     height: 20px;
     border-radius: 20px;
-    margin: 0px 10px 10px 10px;
+    margin: 0px 10px 10px 0px;
 }
 
 .post-bottom ion-icon {
@@ -301,7 +303,6 @@ a {
 .suggestions .suggestion:first-child a {
     margin-left: 30px;
     font-size: 12px;
-    font-family: 'Roboto';
     line-height: 14px;
     font-weight: 500;
     color: #262626;
@@ -394,14 +395,20 @@ a {
 
     .corpo {
         width: 100vw;
-        margin: 54px auto 54px;
+        margin: 54px auto 30px;
         display: block;
+    }
+
+    .left-content {
+        width: 100%;
     }
 
     .stories {
         border: none;
+        width: 100%;
         height: 97px;
         background-color: #FAFAFA;
+        margin-bottom: 15px;
     }
 
     .stories ion-icon {
