--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -184,14 +184,13 @@ a {
 .post-bottom {
     background-color: #FFF;
     border: 1px solid #DBDBDB;
-    padding: 0px 10px 10px;
 }
 
 .post-bottom img {
     width: 20px;
     height: 20px;
     border-radius: 20px;
-    margin: 0px 10px 10px 0px;
+    margin: 0px 10px 10px 10px;
 }
 
 .post-bottom ion-icon {
@@ -251,13 +250,19 @@ a {
 
 .comment {
     width: 100%;
+    height: 25px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 10px;
 }
 
 .comment ion-icon {
     font-size: 14px;
+}
+
+.mais {
+    padding: 0px 10px;
 }
 
 .mais:hover {
@@ -269,11 +274,27 @@ a {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    border-top: 1px solid #DBDBDB;
 }
 
 .input input[type="text"] {
-    width: 75%;
-    border: hidden;
+    width: 80%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border:none;
+    font-weight: 400;
+    font-size: 14px;
+    outline: 0;  
+}
+
+.input .publicar {
+    color: #B3DFFC;
+    font-weight: 400;
+    padding-right: 10px;
+}
+
+.input .publicar:hover {
+    color: #0095F6;
 }
 
 .fixsidebar {
